add experience section

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -6,6 +6,8 @@
   "hero.name": "Israel Larrondo",
   "hero.job": "Diseñador Front-End",
 
+  "experience.title": "+7 years of experience as Front-End Designer",
+
   "footer.title": "Let me demonstrate my experience",
   "footer.description": "My portfolio speaks for itself, but I'm eager to show you how I can apply my skills to your next project.",
   "footer.cta": "Let's talk about work",
