--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -8,6 +8,8 @@
 
   "experience.title": "+7 years of experience as Front-End Designer",
 
+  "projects.title": "Trabajos recientes",
+
   "footer.title": "Let me demonstrate my experience",
   "footer.description": "My portfolio speaks for itself, but I'm eager to show you how I can apply my skills to your next project.",
   "footer.cta": "Let's talk about work",
