--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,7 @@
   "home.hero.greeting": "Hi, im",
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
-  "home.hero.job": "Fron-End Designer",
+  "home.hero.job": "Front-End Designer",
   "home.experience.title": "+7 years of experience as Front-End Designer",
   "home.projects.title": "Recent work",
   "home.projects.seeAll": "See all",
