add lang selector

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -11,9 +11,9 @@
 
   "projects.title": "Proyectos",
 
-  "footer.title": "Let me demonstrate my experience",
-  "footer.description": "My portfolio speaks for itself, but I'm eager to show you how I can apply my skills to your next project.",
-  "footer.cta": "Let's talk about work",
-  "footer.cta.notAvailable": "Not available at the moment",
-  "footer.copyright": "All contents and designs © Arsi."
+  "footer.title": "Déjame demostrarte mi experiencia",
+  "footer.description": "Mi portafolio habla por sí solo, pero estoy ansioso por mostrarte cómo puedo aplicar mis habilidades en tu próximo proyecto.",
+  "footer.cta": "Hablemos de trabajo",
+  "footer.cta.notAvailable": "No disponible por el momento",
+  "footer.copyright": "Todos los contenidos y diseños © Arsi."
 }
