--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -6,7 +6,7 @@
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
   "home.hero.job": "Diseñador Front-End",
-  "home.experience.title": "+7 years of experience as Front-End Designer",
+  "home.experience.title": "+7 años de experiencia como Diseñador Front-End",
   "home.projects.title": "Trabajos recientes",
 
   "projects.title": "Proyectos",
