add button component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,10 +2,10 @@
   "nav.home": "Home",
   "nav.projects": "Projects",
 
-  "home.hero.greeting": "Hi, im",
+  "home.hero.greeting": "👋 Hi, im",
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
-  "home.hero.job": "Front-End Designer",
+  "home.hero.job": "Front-End Designer 🔥",
   "home.experience.title": "+7 years of experience as Front-End Designer",
   "home.projects.title": "Recent work",
   "home.projects.seeAll": "See all",
