--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -2,10 +2,10 @@
   "nav.home": "Inicio",
   "nav.projects": "Proyectos",
 
-  "home.hero.greeting": "Hola, soy",
+  "home.hero.greeting": "👋 Hola, soy",
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
-  "home.hero.job": "Diseñador Front-End",
+  "home.hero.job": "Diseñador Front-End 🔥",
   "home.experience.title": "+7 años de experiencia como Diseñador Front-End",
   "home.projects.title": "Trabajos recientes",
 
