--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,6 +2,7 @@
   "nav.home": "Home",
   "nav.projects": "Projects",
   "nav.shop": "Shop",
+  "nav.shop.thankYou": "Thank you for your purchase",
 
   "home.hero.greeting": "👋 Hi, im",
   "home.hero.name": "Israel",
@@ -14,6 +15,10 @@
   "projects.title": "Projects",
 
   "shop.title": "Shop",
+  "shop.thankYou.title": "Thank you for your purchase!",
+  "shop.thankYou.description": "Your payment has been processed successfully.",
+  "shop.thankYou.alert": "You can now download your file, but please note that this site does not store any user data, so download and store your file in a safe place.",
+  "shop.thankYou.cta": "Download your file",
 
   "404.title": "404",
   "404.description": "The page you are looking for does not exist.",
