change: basePath imports

--- a/src/content/projects/clinicasmileworks.mdx
+++ b/src/content/projects/clinicasmileworks.mdx
@@ -9,7 +9,7 @@ images:
   large: "/assets/img/projects/mocho.large.jpg"
 ---
 
-import { Typography } from "../../components/index.astro";
+import { Typography } from "../../components/index.astro"
 
 <div className="content text-dark dark:text-white">
   <Typography type="h2">Holanda Mundongo</Typography>
