--- a/src/content/projects/clinicasmileworks.mdx
+++ b/src/content/projects/clinicasmileworks.mdx
@@ -2,23 +2,29 @@
 name: "clinicasmileworks"
 lang: "en"
 title: "Clínica Smile Works"
-category: "Web development"
+categories: ["Web development", "UX / UI"]
+date: 202410
+og_image: "https://pub-e84866d2025a4715887cd3e35165cedc.r2.dev/projects/clinicasmileworks/og-image.png"
 images:
-  small: "https://picsum.photos/360/360"
-  medium: "/assets/img/projects/mocho.medium.jpg"
-  large: "/assets/img/projects/mocho.large.jpg"
+  small: "https://pub-e84866d2025a4715887cd3e35165cedc.r2.dev/projects/clinicasmileworks/shot--sm.jpg"
+  medium: "https://pub-e84866d2025a4715887cd3e35165cedc.r2.dev/projects/clinicasmileworks/shot--md.jpg"
+  large: "https://pub-e84866d2025a4715887cd3e35165cedc.r2.dev/projects/clinicasmileworks/shot--xl.jpg"
 ---
 
-import { Typography } from "../../components/index.astro"
+import { Typography, Button, ProjectInfo } from "@/components/index.astro"
 
-<div className="content text-dark dark:text-white">
-  <Typography type="h2">Holanda Mundongo</Typography>
-  <Typography
-    type="p"
-    children="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et turpis
-    sed est aliquet sagittis. Donec id purus ut orci pharetra tincidunt. Aliquam
-    erat volutpat."
-
+<ProjectInfo
+	description="Proyecto creado para una Clínica dental, el cual incluyó Diseño UX / UI y  Desarrollo web."
+	actions={[
+		{
+			url: "https://clinicasmileworks.cl",
+			type: "website",
+		},
+		{
+			url: "https://github.com/arsistyle/clinicasmileworks",
+			type: "source",
+		},
+	]}
+	tools={["Astro", "React", "TailwindCSS", "TypeScript", "Figma", "Cloudflare"]}
+	categories={["Web development", "UX / UI"]}
 />
-
-</div>
