Updated SVG, added dynamic experience years, and improved code robustness

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -8,7 +8,7 @@
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
   "home.hero.job": "Diseñador Front-End 🔥",
-  "home.experience.title": "+7 años de experiencia como Diseñador Front-End",
+  "home.experience.title": "+{YEARS_EXPERIENCE} años de experiencia como Diseñador Front-End",
   "home.projects.title": "Trabajos recientes",
 
   "projects.title": "Proyectos",
