--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,7 +8,7 @@
   "home.hero.name": "Israel",
   "home.hero.lastname": "Larrondo",
   "home.hero.job": "Front-End Designer 🔥",
-  "home.experience.title": "+7 years of experience as Front-End Designer",
+  "home.experience.title": "+{YEARS_EXPERIENCE} years of experience as Front-End Designer",
   "home.projects.title": "Recent work",
   "home.projects.seeAll": "See all",
 
